--- a/ARDoggo/ARDoggo/Base.lproj/Main.storyboard
+++ b/ARDoggo/ARDoggo/Base.lproj/Main.storyboard
@@ -21,14 +21,14 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0b-pY-AP5" userLabel="comeHereButton">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0b-pY-AP5" userLabel="comeHereButton" colorLabel="IBBuiltInLabel-Blue">
                                 <rect key="frame" x="157" y="587" width="60" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" image="comeHere"/>
                                 <connections>
-                                    <action selector="onComeHereButton:" destination="BV1-FR-VrT" eventType="touchUpInside" id="62n-AT-HKa"/>
+                                    <action selector="onComeHereButton:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Tlv-8a-8m0"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -42,7 +42,6 @@
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
-                        <outlet property="onComeHereButton" destination="i0b-pY-AP5" id="0L7-fp-3cW"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                     </connections>
                 </viewController>
